# sonia-emu

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  demo.html  docker-compose.yml  dockerfile.emulator  dockerfile.webui  gid-setup.sh  index.html  license  readme
.github/workflows/: ci.yaml
client/: webui.py
client/static/css/: style.css
client/static/js/: joystick.js
client/templates/: index.html
emulator/src/: main.rs
emulator/src/joystick/: axis.rs  button.rs  mod.rs
emulator/src/utils/: packet.rs
server/: Cargo.toml  Dockerfile
server/src/: main.rs
sonia-emu/emulator/: Cargo.toml
sonia-emu/emulator/src/: main.rs
sonia-emu/emulator/src/joystick/: axis.rs  button.rs  error.rs  mod.rs
sonia-emu/emulator/src/utils/: packet.rs
sonia-emu/webui/: pyproject.toml
sonia-emu/webui/src/: run.py
sonia-emu/webui/src/static/: manifest.json
sonia-emu/webui/src/static/js/: analog.js  joystick.js
sonia-emu/webui/src/templates/: index.html
sonia-emu/webui/src/utils/: socket.py
static/js/: analog.js  joystick.js
webui/: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements  run.py  webui.py
webui/src/: webui.py
webui/src/static/js/: analog.js  joystick.js
webui/static/: manifest.json
webui/static/css/: style.css
webui/static/js/: analog.js  joystick.js  options.js  wakelock.js
webui/templates/: index.html
webui/utils/: __init__.py  socket.py
