[project]
name = "sonia-emu-webui"
version = "0.1.0"
description = "sonia-emu Web UI"
authors = [
    {name = "JarasIau",email = "jaraslau@tutanota.com"}
]
license = {text = "MIT"}
readme = "readme"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
